- Initially supports DCDT-105. - Supports DCDT-160. - Fixes DCDT-161. - Implemented initial DNS service using Java NIO channels. - Refactored services to better utilize Spring + Java Service Wrapper. - Fixed IP address Spring bean validation.